2018-02-01  Jérôme Pasquier  <rainbru@free.fr>

	* src/loadmap.c (read_map_directory): now returns a map_t*.
	* src/loadmap.c (get_map_directory_size): implement new function.
	* src/loadmap.c (load_map): uses strdup instead of strcpy for map's
	name.