@@ -8,6 +8,10 @@ language: c
 compiler:
   - gcc
   - clang
+
+env:
+  global:
+    - CODECOV_TOKEN=f6610a8e-e06a-4e96-bfec-9dcc57f239e1
   
 before_install:
   - sudo apt-get update -qq
